--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,18 @@ a {
 /* Header */
 
 .header {
+    height: 80px;
+}
+
+.navigation {
     max-width: 1440px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 20px;
     padding-left: 80px;
-    padding-right: 80px;
 }
 
 .logo {
@@ -35,15 +44,6 @@ h1 {
     color: #00b4d8;
     font-weight: 500;
     line-height: 66px;
-}
-.navigation {
-    max-width: 1440px;
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-top: 20px;
 }
 
 .navigation__links {
@@ -61,56 +61,96 @@ h1 {
 
 /* Hero Section */
 
-.hero-section_container {
-    max-width: 1440px;
+.hero-section__container {
+    margin: 0 auto;
+    padding-top: 30px;
 }
 
-.hero-section_img {
-    width: 100%;
-    height: auto;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-top: 50px;
-    padding-bottom: 80px;
+.hero-section__background {
+    padding: 300px;
+    margin: 0 auto;
+    background-image: url(./assets/travel.jpg);
 }
 
-.hero-section_container h2 {
-    padding-left: 130px;
-    font-size: 30px;
+.hero-section__descr h2 {
     color: #023e8a;
+    font-size: 80px;
+    line-height: 88px;
+    margin-bottom: 15px;
+    text-align: left;
 }
 
-.hero-section_video {
+.hero-section__descr h3 {
+    color: #023e8a;
+    font-size: 90px;
+    line-height: 99px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-style: italic;
+}
+
+/*about-section*/
+
+.about-section {
+    background-color: #caf0f8;
+    padding-top: 120px;
+}
+
+.about-section__container {
+    margin: 0 auto;
+    padding: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 60px;
+}
+
+.about-section__container__left {
+    width: 60%;
+}
+
+.about-section__container__right {
+    width: 40%;
+}
+
+.about-section__video {
     width: 100%;
     height: auto;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-top: 20px;
 }
 
-.hero-section_container p {
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-top: 10px;
-    font-size: 16px;
-    line-height: 1.6;
+.about-section__container h2 {
+    font-size: 30px;
+    line-height: 1.5;
     margin-bottom: 30px;
     color: #03045e;
+    margin-left: 10px;
 }
 
+.about-section__container p {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+    color: #03045e;
+    margin-left: 10px;
+}
+
+/* top-destination */
+
 .top-destinations {
-    max-width: 1440px;
-    padding-top: 50px;
+    padding-top: 100px;
+    background-color: whitesmoke;
 }
 
 .top-destinations h2 {
     padding-left: 140px;
     font-size: 30px;
     color: #023e8a;
+    padding-bottom: 20px;
 }
 
-.top-destinations_links {
+.top-destinations__links {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding-left: 80px;
@@ -119,19 +159,21 @@ h1 {
     line-height: 1.6;
     margin-bottom: 30px;
     color: #03045e;
+    border-radius: 70px;
+    margin-bottom: 30px;
+    background-color: #caf0f8;
 }
 
-.top-destinations_links_left {
+.top-destinations__links__left {
     width: 80%;
 }
-.top-destinations_links_right {
+.top-destinations__links__right {
     width: 20%;
-    height: max-content;
     padding-right: 80px;
     padding-left: 20px;
 }
 
-.top-destinations_links img {
+.top-destinations__links img {
     width: 100%;
     height: auto;
 }
