--- a/styles.css
+++ b/styles.css
@@ -271,3 +271,201 @@ th {
     font-size: 16px;
     padding-bottom: 8px;
 }
+
+/* Contact Section */
+
+.contact-section__header {
+    padding-top: 50px;
+}
+.contact-section__header h1 {
+    font-style: normal;
+    font-size: 50px;
+    color: #03045e;
+    font-weight: 500;
+    line-height: 55px;
+    padding-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #caf0f8;
+}
+
+.contact-section__header h2 {
+    font-style: normal;
+    font-size: 30px;
+    color: #03045e;
+    line-height: 55px;
+    padding-left: 550px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+.contact-section__container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.contact-section__table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.contact-section__table th {
+    background-color: #00b4d8;
+    color: #03045e;
+}
+
+.contact-section__table td,
+th {
+    text-align: center;
+    border: 2px solid #023e8a;
+    padding: 10px;
+}
+
+.contact-section__table td {
+    background-color: whitesmoke;
+}
+
+/* Form Section */
+
+.form-section__container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 40px;
+    display: flex;
+    gap: 40px;
+    margin-bottom: 40px;
+}
+
+.form-section__container__left {
+    width: 50%;
+}
+
+.form-section__form {
+    background-color: #caf0f8;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.form-section__form h3 {
+    font-size: 30px;
+    line-height: 33px;
+    color: #03045e;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+#firstNameInput,
+#lastNameInput,
+#emailInput,
+#phoneNumberInput,
+#preferredDestinationSelect {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+.form-content input[type="checkbox"] {
+    cursor: pointer;
+}
+
+.form-checkbox {
+    display: block;
+    position: relative;
+    padding-left: 0px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.form-checkbox h5 {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+
+.submit-input {
+    width: 100%;
+    font-size: 18px;
+    background-color: #0077b6;
+    color: #ffffff;
+    padding: 10px 10px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.submit-input:hover {
+    background-color: #3693c5;
+}
+
+.form-radio h5 {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+
+.form-radio {
+    margin-left: 30px;
+}
+
+.form-textarea label {
+    font-size: 17px;
+    line-height: 40px;
+}
+
+.form-textarea textarea {
+    padding: 10px;
+    width: 100%;
+    line-height: 1.5;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    resize: none;
+}
+
+.form-section__container__right {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.form-section__container__right h4 {
+    font-size: 30px;
+    line-height: 33px;
+    color: #03045e;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.icon {
+    width: calc((100% - 40px) / 2);
+    padding-left: 100px;
+    padding-right: 10px;
+    border-radius: 15px;
+}
+
+.icon img {
+    width: auto;
+    height: 80px;
+}
+
+.icon h5 {
+    font-size: 30px;
+    line-height: 33px;
+    color: #03045e;
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
